tests/error/failWhile.sk
int main(){
    int x =0;
    while(i < 3) { /* i undeclrared */
        i = i + 1;
    }
    return 0;
}